SMACK-293: Support optional roster subscription attribute